fixed dashHome display bug, now showing all matches with overflow

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -9,8 +9,8 @@
 }
 
 .emblem {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
 }
 
 body {
@@ -48,8 +48,6 @@ body {
 #team-recent-results {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  position: relative;
-  top: 123px;
   text-align: center;
 }
 
